Made the text more nicely wrap on small (iPhone) screens and fill the horizontal space as well. Fixed a broken link or two.

--- a/assets/timtr.css
+++ b/assets/timtr.css
@@ -6,13 +6,10 @@
 :root {
     
     --bg-color: #0d1114;   /* modified #0d1116 main background */
-    --bg-secondary-color: #0d0d0c;  /* different dark background for highlights */
+    --bg-secondary-color: #0d0d0c;  /* different background for highlights */
     
-    
-    /** Previous color settings for the background
-     --bg-color: #24292e;
-     --bg-secondary-color: #1d1e1f;
-     */
+    --grid-maxWidth: 900px; /* cap at 900px */
+    --grid-gutter: 2rem;
     
     --color-primary: #ff6a00;  /** bright orange */
     --color-lightGrey: #d2d6dd;
@@ -103,12 +100,7 @@ p {
 
 }
 
-/*! remove the bullet "dot" for these line items, e.g.:
-
-    <ul class="nobull">
-      <li>List item with no bullet</li>
-    </ul>
-*/
+/* remove the bullet "dot" for these line items, e.g.: */
 .list-no-bullets {
   list-style-type: none;
 }
@@ -124,21 +116,29 @@ em {
 }
 
 .container {
-    max-width: var(--grid-maxWidth);
+    max-width: 900px;
+    width: 100%;
     margin: 0 auto;
-    width: 900px;
-    /* width: 96%;    old version */
     padding: 0 calc(var(--grid-gutter) / 2);
 }
 
 blockquote {
   background-color: var(--bg-secondary-color);
-  width: 890px;
+  margin: 1rem 0;
+  padding: 0.75rem 0.75rem;
   border-left: 3px solid var(--color-lightGrey);
-  margin-left: 10px;
+
+  
+  /* max-width: 900px; */
+  /* margin-left: 10px; */
+  /*
+  border-left: 3px solid var(--color-lightGrey);
   padding-left: 1.0rem;
   padding-bottom: 0.5rem;
   padding-top: 0.5rem;
+  padding-right: 0.1rem;
+  */
+  
   /* padding: 0.5rem 0.5rem 1.5rem 1.0rem; */
 }
 dl dt {
